# xorg-libxt

./: .gitignore  COPYING  ChangeLog  Makefile.am  README  README.md  autogen.sh  configure.ac  xt.pc.in
include/: Makefile.am
include/X11/: .cvsignore  ConvertI.h  CreateI.h  EventI.h  InitialI.h  Intrinsic.h  IntrinsicI.h  PassivGraI.h  ResConfigP.h  ResourceI.h  ShellP.h  ThreadsI.h  TranslateI.h  VarargsI.h  Xtos.h
man/: Makefile.am  XtAddActions.man  XtAddCallback.man  XtAddEventHandler.man  XtAddExposureToRegion.man  XtAddGrab.man  XtAddInput.man  XtAllocateGC.man  XtAppAddActionHook.man  XtAppAddActions.man  XtAppAddBlockHook.man  XtAppAddConverter.man  XtAppAddInput.man  XtAppAddSignal.man  XtAppAddTimeOut.man  XtAppAddWorkProc.man  XtAppCreateShell.man  XtAppError.man  XtAppErrorMsg.man  XtAppGetErrorDatabase.man  XtAppGetSelectionTimeout.man  XtAppInitialize.man  XtAppLock.man  XtAppNextEvent.man  XtAppReleaseCacheRefs.man  XtAppSetExitFlag.man  XtAppSetFallbackResources.man  XtAppSetTypeConverter.man  XtBuildEventMask.man  XtCallAcceptFocus.man  XtCallActionProc.man  XtCallCallbacks.man  XtClass.man  XtConfigureWidget.man  XtConvert.man  XtConvertAndStore.man  XtCreateApplicationContext.man  XtCreateApplicationShell.man  XtCreatePopupShell.man  XtCreateSelectionRequest.man  (+68 more)
specs/: CH01  CH01.xml  CH02  CH02.xml  CH03  CH03.xml  CH04  CH04.xml  CH05  CH05.xml  CH06  CH06.xml  CH07  CH07.xml  CH08  CH08.xml  CH09  CH09.xml  CH10  CH10.xml  CH11  CH11.xml  CH12  CH12.xml  CH13  CH13.xml  Xtk.intr.front  acknowledgement.xml  appA  appA.xml  appB  appB.xml  appC  appC.xml  appD  appD.xml  appE  appE.xml  appF  intrinsics.xml  (+1 more)
src/: .gitignore  ActionHook.c  Alloc.c  Callback.c  ClickTime.c  Composite.c  Constraint.c  Convert.c  Converters.c  Core.c  Create.c  Destroy.c  Display.c  Error.c  Event.c  EventUtil.c  Functions.c  GCManager.c  Geometry.c  GetActKey.c  GetResList.c  GetValues.c  HookObj.c  Hooks.c  Initialize.c  Intrinsic.c  Keyboard.c  Makefile.am  Manage.c  NextEvent.c  Object.c  PassivGrab.c  Pointer.c  Popup.c  PopupCB.c  RectObj.c  ResConfig.c  Resources.c  Selection.c  SetSens.c  (+15 more)
test/: .gitignore  Converters.c  Makefile.am
util/: .cvsignore  .gitignore  Makefile.am  Shell.ht  StrDefs.ct  StrDefs.ht  makestrs.c  makestrs.man
