xtincludedir = ${includedir}/X11

xtinclude_HEADERS = \
	X11/Composite.h \
	X11/CompositeP.h \
	X11/ConstrainP.h \
	X11/Constraint.h \
	X11/Core.h \
	X11/CoreP.h \
	X11/Intrinsic.h \
	X11/IntrinsicP.h \
	X11/Object.h \
	X11/ObjectP.h \
	X11/RectObj.h \
	X11/RectObjP.h \
	X11/ShellP.h \
	X11/Vendor.h \
	X11/VendorP.h

nodist_xtinclude_HEADERS = \
	X11/StringDefs.h \
	X11/Shell.h

DISTCLEANFILES = \
	X11/StringDefs.h \
	X11/Shell.h
