man3_MANS = \
	XtAddActions.man \
	XtAddCallback.man \
	XtAddEventHandler.man \
	XtAddExposureToRegion.man \
	XtAddGrab.man \
	XtAddInput.man \
	XtAllocateGC.man \
	XtAppAddActionHook.man \
	XtAppAddActions.man \
	XtAppAddBlockHook.man \
	XtAppAddConverter.man \
	XtAppAddInput.man \
	XtAppAddSignal.man \
	XtAppAddTimeOut.man \
	XtAppAddWorkProc.man \
	XtAppCreateShell.man \
	XtAppError.man \
	XtAppErrorMsg.man \
	XtAppGetErrorDatabase.man \
	XtAppGetSelectionTimeout.man \
	XtAppInitialize.man \
	XtAppLock.man \
	XtAppNextEvent.man \
	XtAppReleaseCacheRefs.man \
	XtAppSetExitFlag.man \
	XtAppSetFallbackResources.man \
	XtAppSetTypeConverter.man \
	XtBuildEventMask.man \
	XtCallAcceptFocus.man \
	XtCallActionProc.man \
	XtCallCallbacks.man \
	XtClass.man \
	XtConfigureWidget.man \
	XtConvert.man \
	XtConvertAndStore.man \
	XtCreateApplicationContext.man \
	XtCreateApplicationShell.man \
	XtCreatePopupShell.man \
	XtCreateSelectionRequest.man \
	XtCreateWidget.man \
	XtCreateWindow.man \
	XtDisplay.man \
	XtDisplayInitialize.man \
	XtDisplayStringConversionWarning.man \
	XtDisplayToApplicationContext.man \
	XtError.man \
	XtErrorMsg.man \
	XtFindFile.man \
	XtGetActionKeysym.man \
	XtGetActionList.man \
	XtGetApplicationNameAndClass.man \
	XtGetApplicationResources.man \
	XtGetClassExtension.man \
	XtGetDisplays.man \
	XtGetErrorDatabase.man \
	XtGetGC.man \
	XtGetKeyboardFocusWidget.man \
	XtGetKeysymTable.man \
	XtGetResourceList.man \
	XtGetSelectionParameters.man \
	XtGetSelectionRequest.man \
	XtGetSelectionTimeout.man \
	XtGetSelectionValue.man \
	XtGetSelectionValueIncremental.man \
	XtGetSubresources.man \
	XtGrabKey.man \
	XtHooksOfDisplay.man \
	XtInitialize.man \
	XtInitializeWidgetClass.man \
	XtInsertEventTypeHandler.man \
	XtLastEventProcessed.man \
	XtMakeGeometryRequest.man \
	XtMalloc.man \
	XtManageChildren.man \
	XtMapWidget.man \
	XtName.man \
	XtNameToWidget.man \
	XtNextEvent.man \
	XtOffset.man \
	XtOpenApplication.man \
	XtOwnSelection.man \
	XtParent.man \
	XtParseAcceleratorTable.man \
	XtParseTranslationTable.man \
	XtPopdown.man \
	XtPopup.man \
	XtProcessLock.man \
	XtQueryGeometry.man \
	XtRealizeWidget.man \
	XtRegisterDrawable.man \
	XtRegisterGrabAction.man \
	XtReservePropertyAtom.man \
	XtResolvePathname.man \
	XtSessionGetToken.man \
	XtSetArg.man \
	XtSetKeyTranslator.man \
	XtSetKeyboardFocus.man \
	XtSetLanguageProc.man \
	XtSetMultiClickTime.man \
	XtSetSelectionParameters.man \
	XtSetSensitive.man \
	XtSetValues.man \
	XtSetWMColormapWindows.man \
	XtStringConversionWarning.man \
	XtToolkitThreadInitialize.man \
	XtTranslateCoords.man \
	XtVaCreateArgsList.man

EXTRA_DIST=$(man3_MANS)
